<resources>
    <string name="app_name">Sightable</string>
    <string name="request_permission">This app needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Sightable</string>
    <string name="nav_header_subtitle">dexterai-labs@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_detect">Detect Objects</string>
    <string name="menu_train">Train Model</string>
    <string name="menu_facedetect">Facial Recognition</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="permision_available_camera">Camera Permission has been granted. Preview can now be opened.</string>
    <string name="permissions_not_granted">Permissions were not granted.</string>
    <string name="permission_camera_rationale">Camera permission is needed to show the camera preview.</string>
    <string name="ok">OK</string>
    <string name="hint_text_input_object_name">Type name of object/face</string>
    <string name="hint_text_input_no_of_samples">Input number of samples</string>

    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id" translatable="false">323647815259787</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb323647815259787</string>
    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key" translatable="false">YOUR_CONSUMER_KEY</string>
    <string name="twitter_consumer_secret" translatable="false">YOUR_CONSUMER_SECRET</string>
    <string name="name_object">Name</string>
    <string name="title_basic_preference">Basic Preference</string>


</resources>
