<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_detect">

    <fragment
        android:id="@+id/nav_detect"
        android:name="com.dexterai.sightable.ui.camera.CameraFragment"
        android:label="@string/menu_detect"
        tools:layout="@layout/fragment_objectrecognition" />

    <fragment
        android:id="@+id/nav_training"
        android:name="com.dexterai.sightable.ui.training.TrainingFragment"
        android:label="@string/menu_train"
        tools:layout="@layout/fragment_training" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.dexterai.sightable.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_facedetect"
        android:name="com.dexterai.sightable.ui.facerecognition.FaceRecognitionFragment"
        android:label="@string/menu_facedetect"
        tools:layout="@layout/fragment_facerecognition" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.dexterai.sightable.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.dexterai.sightable.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" >
        <action
            android:id="@+id/action_nav_share_self"
            app:destination="@id/nav_share" />
    </fragment>

    <fragment
        android:id="@+id/nav_send"
        android:name="com.dexterai.sightable.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />
</navigation>