<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rr2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="5sp"
        android:gravity="center">
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/camera_preview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

    </FrameLayout>

    <ImageView
        android:id="@+id/captured_image"
        android:layout_width="280sp"
        android:layout_height="180sp"
        android:adjustViewBounds="true"
        android:background="@drawable/image_view_border"
        android:cropToPadding="true"
        android:elevation="8sp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.29000002" />

    <TextView
        android:id="@+id/textViewName"
        android:layout_width="50dp"
        android:layout_height="27dp"
        android:text="@string/name_object"
        android:textColor="#F50057"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/camera_preview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/camera_preview"
        app:layout_constraintVertical_bias="0.73" />

    <TextView
        android:id="@+id/textViewCountdown"
        android:layout_width="340dp"
        android:layout_height="338dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:textAlignment="center"
        android:textColor="#8B961FFF"
        android:textSize="200sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39" />

    <com.google.android.material.textfield.TextInputLayout
        app:endIconMode="clear_text"
        android:id="@+id/textInputLayoutSamples"
        android:layout_width="140dp"
        android:layout_height="38dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewSamples"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TextInputSamples"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:background="#1BFFFFFF"
            android:hint="@string/hint_text_input_no_of_samples"
            android:singleLine="true"
            android:text="5"
            android:textColor="#D32F2F" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        app:endIconMode="clear_text"
        android:id="@+id/textInputLayoutName"
        android:layout_width="226dp"
        android:layout_height="37dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewName"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.73">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/TextInputName"
            android:layout_width="match_parent"
            android:layout_height="28dp"
            android:background="#1BFFFFFF"
            android:hint="@string/hint_text_input_object_name"
            android:inputType="textPersonName"
            android:singleLine="true"
            android:textColor="#D32F2F"
            tools:text="@tools:sample/first_names" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/buttonTakepic"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:elevation="100dp"
        android:text="Take Picture"
        android:textColorHighlight="#FF5252"
        android:textColorLink="#69F0AE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.34"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97" />


    <Button
        android:id="@+id/buttonTrain"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:elevation="100dp"
        android:text="Train"
        android:textColorHighlight="#CDDC39"
        android:textColorLink="#69F0AE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.73"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97" />

    <SeekBar
        android:id="@+id/seekBar"
        style="@android:style/Widget.Material.SeekBar.Discrete"
        android:layout_width="198dp"
        android:layout_height="31dp"
        android:backgroundTintMode="add"
        android:elevation="100dp"
        android:fadeScrollbars="false"
        android:hapticFeedbackEnabled="true"
        android:max="4"
        android:progress="0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.87" />

    <TextView
        android:id="@+id/textViewInterval"
        android:layout_width="39dp"
        android:layout_height="28dp"
        android:layout_marginEnd="32dp"
        android:textColor="#E91E63"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.62"
        app:layout_constraintStart_toEndOf="@+id/seekBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.88" />

    <TextView
        android:id="@+id/textViewSamples"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Training Samples"
        android:textColor="#F50057"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/camera_preview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.12"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />

    <TextView
        android:id="@+id/textViewInterval1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:fontFamily="sans-serif"
        android:text="Interval"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#F50057"
        android:textSize="18sp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/camera_preview"
        app:layout_constraintVertical_bias="0.87" />

</androidx.constraintlayout.widget.ConstraintLayout>